--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="index.css" />
     <title>Movie Online</title>
   </head>
   <body>
